# Bastion-Enclave-repo-V2

./: AGENT_PROTOCOL.md  App.tsx  CHANGELOG.md  MATH.md  README.md  SECURITY_ANALYSIS.md  SECURITY_MANIFESTO.md  generate-images.js  index.css  index.html  index.tsx  invariants.ts  manifest.json  metadata.json  package-lock.json  package.json  parity.spec.json  puter.json  test_hash.js  tsconfig.json  types.ts  vercel.json  vite.config.ts
bastion-core/: Cargo.toml
bastion-core/src/: lib.rs
components/: AIAuditor.tsx  AgentBridge.tsx  AuthScreen.tsx  BreachPage.tsx  Button.tsx  Contacts.tsx  CovenantModal.tsx  DeveloperConsole.tsx  DocsPage.tsx  DocumentsPage.tsx  GamePage.tsx  Generator.tsx  IdentityCard.tsx  Input.tsx  LandingFeatures.tsx  LandingPage.tsx  Locker.tsx  MigrationModal.tsx  NewsFeed.tsx  NewsPage.tsx  Notes.tsx  ProvisionalFlagAvatar.tsx  RecoverySetup.tsx  Sandbox.tsx  SecurityGame.tsx  SecurityMonitor.tsx  TopNav.tsx  Vault.tsx  VaultBreachScanner.tsx
migrated_prompt_history/: prompt_2026-02-08T06:39:53.568Z.json
public/: Bastion.java  puter.json  robots.txt  sitemap.xml  skill.md
python_core/: bastion.py  install.sh
python_core/src/: core.py  features.py  interface.py  serializer.py  updater.py
services/: attestation.ts  breachService.ts  cryptoService.ts  genesis.ts  javaTemplate.ts  llmService.ts  provenance.ts  pythonDistribution.ts  recoveryService.ts  serializer.ts
src/components/: LandingPage.tsx
src/services/: provenance.ts
tests/: crypto.test.ts  kat.test.ts
