[package]
name = "bastion-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
blake3 = "1.5"
hkdf = "0.12"
chacha20poly1305 = "0.10"
rand = { version = "0.8", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = "0.5"
